--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -14,6 +14,14 @@
 	cursor: pointer;
 }
 
+.button-loading {
+	color: transparent;
+}
+
+.button-main:hover {
+	background: darkred;
+}
+
 .button-spinner-container {
 	position: absolute;
 	left: 0;
